trax1 model works, shows on existing file UI

--- a/eclipseDocs/general/contentModelExtension/config/alfresco/web-extension/messages/trax1Model.properties
+++ b/eclipseDocs/general/contentModelExtension/config/alfresco/web-extension/messages/trax1Model.properties
@@ -1,5 +1,9 @@
 #trax1:activity
-assoc.trax1_relatedactivities=Other Activities
-assoc.trax1_relatedrubric=Rubric
+type.trax1_otherId=Other ID
+type.trax1_title=Titlee
 
-test.trax1_name=Bundle Name
+assoc.trax1_assessment=Assessment (one)
+assoc.trax1_lessons=Lessons (many)
+assoc.trax1_projects=Projects (many)
+assoc.trax1_rubric=Rubric (one)
+assoc.trax1_certificates=Certificates (many)
